# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-11-28 16:46:30 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-76

    Summary:
      scripts.icms, add command to pack the database
    Revision:
      itools--main--0.12--patch-76


    modified files:
     Changelog scripts/icms.py


2005-11-28 12:02:52 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-75

    Summary:
      move the documentation to another package (itools-docs)
    Revision:
      itools--main--0.12--patch-75


    removed files:
     doc/.arch-ids/=id doc/.arch-ids/Makefile.id
     doc/.arch-ids/arch.tex.id doc/.arch-ids/csv.tex.id
     doc/.arch-ids/files.tex.id doc/.arch-ids/files2.tex.id
     doc/.arch-ids/folders.tex.id doc/.arch-ids/handlers.dot.id
     doc/.arch-ids/i18n.tex.id doc/.arch-ids/intro.tex.id
     doc/.arch-ids/itools.sty.id doc/.arch-ids/itools.tex.id
     doc/.arch-ids/l10n.fig.id doc/.arch-ids/latex2stx.txt.id
     doc/.arch-ids/packages.dot.id doc/.arch-ids/resources.tex.id
     doc/.arch-ids/state.dia.id doc/.arch-ids/stl.dia.id
     doc/.arch-ids/stl.tex.id doc/.arch-ids/style.tex.id
     doc/.arch-ids/task_tracker.eps.id doc/.arch-ids/types.tex.id
     doc/.arch-ids/uri.tex.id doc/.arch-ids/web.tex.id
     doc/.arch-ids/web_tree.dia.id doc/.arch-ids/workflow.tex.id
     doc/.arch-ids/xml.tex.id doc/Makefile doc/arch.tex doc/csv.tex
     doc/examples/.arch-ids/=id doc/examples/.arch-ids/hello.txt.id
     doc/examples/.arch-ids/hello.xhtml.id
     doc/examples/chapter8/.arch-ids/=id
     doc/examples/chapter8/.arch-ids/hello.xml.id
     doc/examples/chapter8/.arch-ids/namespaces.py.id
     doc/examples/chapter8/.arch-ids/parser.py.id
     doc/examples/chapter8/hello.xml
     doc/examples/chapter8/namespaces.py
     doc/examples/chapter8/parser.py
     doc/examples/chapter9/.arch-ids/=id
     doc/examples/chapter9/.arch-ids/template.xml.id
     doc/examples/chapter9/template.xml